[workspace]
members = ["engine", "run-wasm", "examples/*"]
default-members=["engine", "run-wasm", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD3"
authors = ["Kaifuny"]

[workspace.dependencies]
# Common
winit = "0.29.2"
pollster = "0.3.0"
log = "0.4.0"
env_logger = "0.9.0"

# Metal
metal = "0.27.0"
objc = "0.2.7"
core-graphics-types = "0.1.2"
cocoa = "0.24.0"

# Web
cargo-run-wasm = "0.3.0"
web-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

