[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit.workspace = true
metal.workspace = true
objc.workspace = true
core-graphics-types.workspace = true
cocoa.workspace = true
web-sys.workspace = true
pollster.workspace = true
wasm-bindgen-futures.workspace = true
log.workspace = true
env_logger.workspace = true
