[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"
targets = ["wasm32-unknown-unknown"]

[dependencies]
winit.workspace = true
metal.workspace = true
objc.workspace = true
core-graphics-types.workspace = true
cocoa.workspace = true
web-sys = { workspace = true, features = ["CanvasRenderingContext2d", "Blob"] }
pollster.workspace = true
wasm-bindgen-futures.workspace = true
log.workspace = true
env_logger.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
